JavaFX changes Swing, adds GearView.fxml and corresponding functionality